# esp32-privacy-cam

./: .gitignore  Cargo.toml  build.rs  diagram.json  espflash.toml  justfile  partitions.csv  sdkconfig.defaults  wokwi.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: face_detector.rs  main.rs  types.rs
src/libs/: bindings.h  camera.rs  mod.rs
src/libs/esp_dl/: CMakeLists.txt  esp_dl.cpp  esp_dl.h  mod.rs
src/libs/esp_tflite_bridge/: CMakeLists.txt  esp_tflite_micro_bridge.cpp  esp_tflite_micro_bridge.h  mod.rs
src/libs/esp_tflite_micro/: esp_tflite_micro_bridge.cpp  esp_tflite_micro_bridge.h  mod.rs
src/models/: README.md  profile_model.py
src/video_server/: mod.rs  page.html
