[package]
name = "esp32-privacy-cam"
version = "0.1.0"
authors = ["Eilay K <22532056+eilayk@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-privacy-cam"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 3

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = 2

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
anyhow = "1.0.101"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
itoa = "1.0.17"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.1.5" }
bindings_header = "src/libs/bindings.h"
bindings_module = "camera"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-dl", version = "3.2.0" }
bindings_header = "src/libs/bindings.h"
bindings_module = "dl"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/pedestrian_detect", version = "0.3.0" }
bindings_header = "src/libs/bindings.h"
bindings_module = "pedestrian_detect"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["src/libs/esp_dl"]

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
